# ngg-spice

./: .gitignore  README.md  index.html  package.json  schema.yaml  tailwind.config.js  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  test.cir
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/resources/bjt/: models_seed_data.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_state/: instance.rs  mod.rs
src-tauri/src/app_state/models/: bjt.rs  mod.rs
src-tauri/src/cinnamon/: engine.rs
src-tauri/src/cinnamon/ngspice/: commands.rs  types.rs
src-tauri/src/cinnamon/spice/: callbacks.rs  commands.rs  spice.rs
src-tauri/src/common/numbers/: position.rs
src-tauri/src/compat/: commands.rs  engine.rs  mod.rs
src-tauri/src/compat/spice/: directives.rs  mod.rs
src-tauri/src/init/: mod.rs
src-tauri/src/ng/: initializer.rs  lib.rs  structs.rs
src-tauri/src/paprika/: mod.rs
src-tauri/src/simulator/: commands.rs  manager.rs  mod.rs  sharedlib.rs  simulation.rs  simulation_data.rs  simulation_status.rs  simulator.rs  simulator_error.rs  unit_of_magnitude.rs  units.rs
src-tauri/temp/: 15fc1b1e-7fab-4de1-a9d2-4983eee88614.cir  1fd1b12d-238b-45b6-b5a8-d151a0f7da96.cir  278470ee-7d33-4fe0-b794-84476fb25b65.cir  28766c7e-ebf7-457a-8dc3-4f2b1e83290a.cir  3acf0a96-ffac-4be0-9e21-97895ad980c2.cir  3dcdc3e0-50bb-4aa7-a7d2-75a2dc7171ab.cir  3dda3fb2-4900-4bd8-afef-cd66f4a4c3b6.cir  3fadfaf7-37d5-49f1-a5d4-fecce01239f2.cir  426c34bd-4985-4452-9b48-6d4f6fce96ea.cir  4763702e-ee52-4c95-ac9d-cb358e792957.cir  5698a903-31b3-4511-8634-919ea8f46627.cir  7533fcfa-01c4-47df-a709-ff1303b143e0.cir  76b2670e-b279-445e-b351-d5dc14fae54c.cir  78e6bf4c-e9e5-4529-97f0-f9e6968b915b.cir  7e70fb33-3814-4d77-9ab0-321bfdfbd169.cir  86d19eb8-5a06-423d-9284-a51382158572.cir  883626db-67a2-4003-b258-a49822716a2a.cir  93c322b4-ee3e-4f3b-a28e-7708d195d89e.cir  9ad44a5e-9789-4e2d-a4d7-f69d4ea710fb.cir  a89ec3f6-0735-47f2-95c0-fc43b7af58d3.cir  cc8b49a4-0223-4ee5-882c-dd3251a19e8f.cir  e20e2524-c03c-42e0-a45c-ea7efbb38948.cir
(+218 files in other folders)
