[package]
name = "nggspice"
version = "0.0.0"
description = "A Tauri App"
authors = ["julian garcia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gspice"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "=2.0.5", features = [] }

[dependencies]
tauri = { version = "=2.2.1", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.7"
libc = "0.2"
colored = "2.0"
num-complex = "0.4"
tauri-plugin-os = "=2.2.0"
tauri-plugin-shell = "=2.2.0"
tauri-plugin-decorum = "1.0.0"
tao = "0.28.1"
tauri-plugin-fs = "=2.2.0"
tokio = { version = "1", features = ["full"] }
tauri-plugin-log = "=2.2.0"
log = "0.4"
native_db = "0.8.1"
native_model = "0.4.20"
once_cell = "1.19.0"
itertools = "0.13"
tauri-plugin-dialog = "2.2.0"
geo = "0.29.3"
uuid = "1.12.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
